# json-schema-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  VERSION  conftest.py  mkdocs.yml  pyproject.toml  pytest.ini
scripts/: example-install-artifactory-dependencies.bash  extract-environment-variables.py  fix-system-ca-bundle.bash  fix-virtual-environment-ca-bundle.bash  generate-example-root-ca-pem.bash
scripts/test-data/: .gitignore  laravel-example.env
src/cli/: main.py
src/internal/: versioning.py  versioning_test.py
src/logging/: adapter.py
src/models/: base.py  base_test.py  configuration.py  configuration_test.py
src/models/internal/: base.py
src/polyium/: __main__.py
src/polyium/cli/: main.py
src/polyium/internal/: __init__.py  versioning.py  versioning_test.py
src/polyium/internal/logging/: __init__.py
src/polyium/models/: base.py  base_test.py  configuration.py  configuration_test.py
src/polyium/models/internal/: __init__.py  base.py  utilities.py
src/polyium/utilities/: colors_test.py  systems.py  systems_test.py
src/utilities/: colors.py  colors_test.py  systems_test.py
